--- a/home.html
+++ b/home.html
@@ -8,11 +8,13 @@
     <body>
         <header>
             <div>
-                <img
-                    class="logo"
-                    src="imgs/optimat-logo.png"
-                    alt="Optimat logo"
-                />
+                <a href="home.html">
+                    <img
+                        class="logo"
+                        src="imgs/optimat-logo.png"
+                        alt="Optimat logo"
+                    />
+                </a>
             </div>
             <nav class="nav-desktop">
                 <ul>
