--- a/problem.html
+++ b/problem.html
@@ -9,11 +9,13 @@
     <body>
         <header>
             <div>
-                <img
-                    class="logo"
-                    src="imgs/optimat-logo.png"
-                    alt="Optimat logo"
-                />
+                <a href="home.html">
+                    <img
+                        class="logo"
+                        src="imgs/optimat-logo.png"
+                        alt="Optimat logo"
+                    />
+                </a>
             </div>
             <nav class="nav-desktop">
                 <ul>
@@ -40,8 +42,7 @@
                         <a href="home.html">Home</a>
                     </li>
                     <li>
-                        <a class="active"
-                        href="problem.html">Problem</a>
+                        <a class="active" href="problem.html">Problem</a>
                     </li>
                     <li>
                         <a href="solution.html">Solution</a>
@@ -76,7 +77,8 @@
                 </div>
 
                 <div>
-                    <img class="problem-img"
+                    <img
+                        class="problem-img"
                         src="imgs/problem/woman-opening-fridge.jpg"
                         alt="Woman in front of fridge."
                     />
@@ -116,7 +118,11 @@
 
             <section>
                 <div class="problem-person">
-                    <img class="problem-img" src="imgs/problem/recent-parents.jpg" alt="A couple kissing their baby." />
+                    <img
+                        class="problem-img"
+                        src="imgs/problem/recent-parents.jpg"
+                        alt="A couple kissing their baby."
+                    />
                     <h3>I am a recent parent</h3>
                     <p>
                         With a child, there is a lot of things to think about
@@ -126,7 +132,11 @@
                     </p>
                 </div>
                 <div class="problem-person">
-                    <img class="problem-img" src="imgs/problem/between-20-30.jpg" alt="Group of young adults looking at screens." />
+                    <img
+                        class="problem-img"
+                        src="imgs/problem/between-20-30.jpg"
+                        alt="Group of young adults looking at screens."
+                    />
                     <h3>I am between 20 and 30</h3>
                     <p>
                         Being young, I often eat outside and forget that I have
@@ -136,7 +146,11 @@
                     </p>
                 </div>
                 <div class="problem-person">
-                    <img  class="problem-img" src="imgs/problem/rich.jpg" alt="Two people discussing in a nice office." />
+                    <img
+                        class="problem-img"
+                        src="imgs/problem/rich.jpg"
+                        alt="Two people discussing in a nice office."
+                    />
                     <h3>I am wealthy</h3>
                     <p>
                         Money is not my real motivation for taking more
@@ -160,7 +174,8 @@
                 </div>
 
                 <div class="problem-graph">
-                    <img class="problem-solution-img"
+                    <img
+                        class="problem-solution-img"
                         src="imgs/problem/graph-trash.jpeg"
                         alt="graph"
                     />
