--- a/prototype.html
+++ b/prototype.html
@@ -7,52 +7,62 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     </head>
     <body>
-            <header>
-                    <div>
-                        <img class="logo" src="imgs/optimat-logo.png" alt="Optimat logo" />
-                    </div>
-                    <nav class="nav-desktop">
-                        <ul>
-                            <li>
-                                <a href="home.html">Home</a>
-                            </li>
-                            <li>
-                                <a href="problem.html">Problem</a>
-                            </li>
-                            <li>
-                                <a href="solution.html">Solution</a>
-                            </li>
-                            <li>
-                                <a class="active" href="prototype.html">Prototype</a>
-                            </li>
-                            <li>
-                                <a href="sources.html">Sources</a>
-                            </li>
-                        </ul>
-                    </nav>
-                    <nav class="nav-mobile">
-                        <ul>
-                            <li>
-                                <a href="home.html">Home</a>
-                            </li>
-                            <li>
-                                <a href="problem.html">Problem</a>
-                            </li>
-                            <li>
-                                <a href="solution.html">Solution</a>
-                            </li>
-                            <li>
-                                <a class="active" href="prototype.html">Prototype</a>
-                            </li>
-                            <li>
-                                <a href="sources.html">Sources</a>
-                            </li>
-                        </ul>
-                    </nav>
-                </header>
+        <header>
+            <div>
+                <a href="home.html">
+                    <img
+                        class="logo"
+                        src="imgs/optimat-logo.png"
+                        alt="Optimat logo"
+                    />
+                </a>
+            </div>
+            <nav class="nav-desktop">
+                <ul>
+                    <li>
+                        <a href="home.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="problem.html">Problem</a>
+                    </li>
+                    <li>
+                        <a href="solution.html">Solution</a>
+                    </li>
+                    <li>
+                        <a class="active" href="prototype.html">Prototype</a>
+                    </li>
+                    <li>
+                        <a href="sources.html">Sources</a>
+                    </li>
+                </ul>
+            </nav>
+            <nav class="nav-mobile">
+                <ul>
+                    <li>
+                        <a href="home.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="problem.html">Problem</a>
+                    </li>
+                    <li>
+                        <a href="solution.html">Solution</a>
+                    </li>
+                    <li>
+                        <a class="active" href="prototype.html">Prototype</a>
+                    </li>
+                    <li>
+                        <a href="sources.html">Sources</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
         <main>
             <div>
-                <img class="big-picture" src="https://via.placeholder.com/400" alt="big img" />
+                <img
+                    class="big-picture"
+                    src="https://via.placeholder.com/400"
+                    alt="big img"
+                />
             </div>
             <section>
                 <div class="prototype-text">
@@ -64,13 +74,21 @@
                         you had taken the time to plan. Or use it in a recepie.
                     </p>
                 </div>
-                <div >
-                    <img class="prototype-img" src="imgs/prototype/Recipies.png" alt="prototype img" />
+                <div>
+                    <img
+                        class="prototype-img"
+                        src="imgs/prototype/Recipies.png"
+                        alt="prototype img"
+                    />
                 </div>
             </section>
             <section>
                 <div>
-                    <img class="prototype-img" src="imgs/prototype/Inventory.png" alt="prototype img" />
+                    <img
+                        class="prototype-img"
+                        src="imgs/prototype/Inventory.png"
+                        alt="prototype img"
+                    />
                 </div>
                 <div class="prototype-text">
                     <h2>Start using what you have</h2>
@@ -90,12 +108,20 @@
                     </p>
                 </div>
                 <div>
-                    <img class="prototype-img" src="imgs/prototype/Addnew.png" alt="prototype img" />
+                    <img
+                        class="prototype-img"
+                        src="imgs/prototype/Addnew.png"
+                        alt="prototype img"
+                    />
                 </div>
             </section>
             <section>
                 <div>
-                    <img class="prototype-img" src="imgs/prototype/Schedule.png" alt="prototype img" />
+                    <img
+                        class="prototype-img"
+                        src="imgs/prototype/Schedule.png"
+                        alt="prototype img"
+                    />
                 </div>
                 <div class="prototype-text">
                     <h2>Kitchen matching!</h2>
