--- a/solution.html
+++ b/solution.html
@@ -9,11 +9,13 @@
     <body>
         <header>
             <div>
-                <img
-                    class="logo"
-                    src="imgs/optimat-logo.png"
-                    alt="Optimat logo"
-                />
+                <a href="home.html">
+                    <img
+                        class="logo"
+                        src="imgs/optimat-logo.png"
+                        alt="Optimat logo"
+                    />
+                </a>
             </div>
             <nav class="nav-desktop">
                 <ul>
@@ -73,7 +75,8 @@
                     </p>
                 </div>
                 <div>
-                    <img class="solution-img"
+                    <img
+                        class="solution-img"
                         src="https://via.placeholder.com/150x250"
                         alt="Kvinne foran kjøleskap"
                     />
@@ -98,7 +101,8 @@
                     </p>
                 </div>
                 <div>
-                    <img class="solution-img"
+                    <img
+                        class="solution-img"
                         src="imgs/solution/barcode-cellphone.jpg"
                         alt="QR code"
                     />
