--- a/sources.html
+++ b/sources.html
@@ -10,11 +10,13 @@
     <body>
         <header>
             <div>
-                <img
-                    class="logo"
-                    src="imgs/optimat-logo.png"
-                    alt="Optimat logo"
-                />
+                <a href="home.html">
+                    <img
+                        class="logo"
+                        src="imgs/optimat-logo.png"
+                        alt="Optimat logo"
+                    />
+                </a>
             </div>
             <nav class="nav-desktop">
                 <ul>
@@ -127,10 +129,26 @@
                 <h2>Prototype</h2>
                 <ul>
                     <li>
-                        <a target="_blank" href="https://icons8.com/">Fridge icon</a> icon by <a target="_blank" href="https://icons8.com/%22%3EIcons8">Icon8</a>
+                        <a target="_blank" href="https://icons8.com/"
+                            >Fridge icon</a
+                        >
+                        icon by
+                        <a
+                            target="_blank"
+                            href="https://icons8.com/%22%3EIcons8"
+                            >Icon8</a
+                        >
                     </li>
                     <li>
-                        <a target="_blank" href="https://icons8.com/">Calendar icon</a> icon by <a target="_blank" href="https://icons8.com/%22%3EIcons8">Icon8</a>
+                        <a target="_blank" href="https://icons8.com/"
+                            >Calendar icon</a
+                        >
+                        icon by
+                        <a
+                            target="_blank"
+                            href="https://icons8.com/%22%3EIcons8"
+                            >Icon8</a
+                        >
                     </li>
                 </ul>
             </div>
