--- a/sources.html
+++ b/sources.html
@@ -127,7 +127,10 @@
                 <h2>Prototype</h2>
                 <ul>
                     <li>
-                        <a href=""></a>
+                        <p>Pumpkin waffle recipe</p>
+                        <a href="https://www.savorynothings.com/simple-pumpkin-waffles/
+                        Kilde til oppskrift.">https://www.savorynothings.com/simple-pumpkin-waffles/
+                        Kilde til oppskrift.</a>
                     </li>
                 </ul>
             </div>
