--- a/prototype.html
+++ b/prototype.html
@@ -1,111 +1,110 @@
 <!DOCTYPE html>
-<html lang="en">
+    <html lang="en">
     <head>
-        <meta charset="UTF-8" />
+        <meta charset="UTF-8">
         <title>Web final project</title>
-        <link rel="stylesheet" href="stylesheet/style.css" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" type="text/css" href="stylesheet/style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     </head>
     <body>
-            <header>
-                    <div>
-                        <img class="logo" src="imgs/optimat-logo.png" alt="Optimat logo" />
-                    </div>
-                    <nav class="nav-desktop">
-                        <ul>
-                            <li>
-                                <a href="home.html">Home</a>
-                            </li>
-                            <li>
-                                <a href="problem.html">Problem</a>
-                            </li>
-                            <li>
-                                <a href="solution.html">Solution</a>
-                            </li>
-                            <li>
-                                <a class="active" href="prototype.html">Prototype</a>
-                            </li>
-                            <li>
-                                <a href="sources.html">Sources</a>
-                            </li>
-                        </ul>
-                    </nav>
-                    <nav class="nav-mobile">
-                        <ul>
-                            <li>
-                                <a href="home.html">Home</a>
-                            </li>
-                            <li>
-                                <a href="problem.html">Problem</a>
-                            </li>
-                            <li>
-                                <a href="solution.html">Solution</a>
-                            </li>
-                            <li>
-                                <a class="active" href="prototype.html">Prototype</a>
-                            </li>
-                            <li>
-                                <a href="sources.html">Sources</a>
-                            </li>
-                        </ul>
-                    </nav>
-                </header>
-        <main>
+        <header>
             <div>
-                <img class="big-picture" src="https://via.placeholder.com/400" alt="big img" />
+                <img class="logo" src="imgs/optimat-logo.png" alt="Optimat logo"/>
             </div>
-            <section>
-                <div class="prototype-text">
-                    <h2>Get the recipies for what you have</h2>
-                    <p>
-                        Staring into the dark abyss of a empty fridge. Feeling
-                        the smell of a rotten fruit. The uneasy feeling of
-                        throwing out food that could have been eaten, just if
-                        you had taken the time to plan. Or use it in a recepie.
+            <nav class="nav-desktop">
+                <ul>
+                    <li>
+                        <a class="active" href="home.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="problem.html">Problem</a>
+                    </li>
+                    <li>
+                        <a href="solution.html">Solution</a>
+                    </li>
+                    <li>
+                        <a href="prototype.html">Prototype</a>
+                    </li>
+                    <li>
+                        <a href="sources.html">Sources</a>
+                    </li>
+                </ul>
+            </nav>
+            <nav class="nav-mobile">
+                <ul>
+                    <li>
+                        <a class="active" href="home.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="problem.html">Problem</a>
+                    </li>
+                    <li>
+                        <a href="solution.html">Solution</a>
+                    </li>
+                    <li>
+                        <a href="prototype.html">Prototype</a>
+                    </li>
+                    <li>
+                        <a href="sources.html">Sources</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+
+        <div class="contentPrototype">
+            <div class="prototypeHeader">
+                <h1>Prototype</h1>
+                <p>On this page we will show exactly how our app looks and works!</p>
+                <p>The entire focus on the design is to make it simple, clear and easy to use.
+                    Our goal is that everyone can use our app with no issues. </p>
+                <p>Scroll down to see all the cool stuff you can do with our app!</p>
+            </div>
+            <div class="prototypeContent">
+
+                <div class="prototype1">
+                    <img src="imgs/prototype/Recipies.png">
+                    <h1>Start, login and register</h1>
+                    <p>The very first page you see when you open our app is the start page. On this page you will be
+                        presented with our logo and a short description of our app.</p>
+                    <p>When you click "Let's go" you be loaded into our login screen, where you can login if you have an
+                        account or register if it's your first time using the app. To make the registration as simple and
+                        quick as possible you have the option to register with an existing facebook or google account.</p>
+                </div>
+
+                <div class="prototype1">
+                    <img src="imgs/prototype/Addnew.png">
+                    <h1>Add new product</h1>
+                    <p>On this page you can add a new product to your inventory. It is very simple. All you have to do
+                        is scan the barcode of the product with the camera on your phone. Automatically after this all
+                        the information will be recieved automatically. Such as name of the item, nutrional content like
+                        calories etc and the expiration date. </p>
+                </div>
+
+                <div class="prototype1">
+                    <img src="imgs/prototype/Inventory.png">
+                    <h1>Inventory</h1>
+                    <p>Here you will see all the items you have scanned into the app. The inventory is split into cold
+                        items and dry items. You can see the product name, description and how many days left til expiration. </p>
+                </div>
+
+                <div class="prototype1">
+                    <img src="imgs/prototype/Recipies.png">
+                    <h1>Recipes</h1>
+                    <p>Not sure what to have for dinner? Then the recipies are perfect for you. We show you exactly what
+                        dishes you can make with the items you have. We even tell you if your expired items are safe to
+                        use with the dish. We have recepies for everything, breakfast, lunch, dinner, snacks, smoothies and more!
                     </p>
                 </div>
-                <div >
-                    <img class="prototype-img" src="imgs/prototype/Recipies.png" alt="prototype img" />
+
+                <div class="prototype1">
+                    <img src="imgs/prototype/Schedule.png">
+                    <h1>Schedule</h1>
+                    <p>On the "Schedule" page you can plan what dishses to have what days, the app makes sure you have
+                        enough of everything, and if you don't it will say what you need and how much.</p>
                 </div>
-            </section>
-            <section>
-                <div>
-                    <img class="prototype-img" src="imgs/prototype/Inventory.png" alt="prototype img" />
-                </div>
-                <div class="prototype-text">
-                    <h2>Start using what you have</h2>
-                    <p>
-                        Soft reminders to help you eat up your leftovers
-                    </p>
-                </div>
-            </section>
-            <section>
-                <div class="prototype-text">
-                    <h2>Organize your fridge</h2>
-                    <p>
-                        Take a picture of your fridge to instantly get advice on
-                        how you can organize it - using simple principles such
-                        as First in First out, we make it easer to stay
-                        organized.
-                    </p>
-                </div>
-                <div>
-                    <img class="prototype-img" src="imgs/prototype/Addnew.png" alt="prototype img" />
-                </div>
-            </section>
-            <section>
-                <div>
-                    <img class="prototype-img" src="imgs/prototype/Schedule.png" alt="prototype img" />
-                </div>
-                <div class="prototype-text">
-                    <h2>Kitchen matching!</h2>
-                    <p>
-                        You have some foods that miss some foods - we suggest
-                        some of your friedns that you can meet to cook together
-                        with, since we know their fridge, we know what they have
-                    </p>
-                </div>
-            </section>
-        </main>
+
+            </div>
+        </div>
     </body>
 </html>
