--- a/sources.html
+++ b/sources.html
@@ -105,7 +105,7 @@
                     </li>
 
                     <li>
-                        <p></p>
+                        <p>SSB statisic graph (trash from households)</p>
                         <a
                             href="https://www.ssb.no/natur-og-miljo/statistikker/avfkomm/aar/2016-06-21"
                             >https://www.ssb.no/natur-og-miljo/statistikker/avfkomm/aar/2016-06-21</a
@@ -116,10 +116,10 @@
                 <h2>Solution</h2>
                 <ul>
                     <li>
-                        <p>APA 6TH</p>
+                        <p>Barcode cellphone close up</p>
                         <a
                             href="https://www.pexels.com/photo/barcode-cellphone-close-up-coded-278430/"
-                            >LINK</a
+                            >https://www.pexels.com/photo/barcode-cellphone-close-up-coded-278430/</a
                         >
                     </li>
                     <li>
