--- a/prototype.html
+++ b/prototype.html
@@ -67,7 +67,7 @@
                 </div>
          </section>
          <div class="prototypeContent">
-            <section>
+            <section style="flex-direction: column;">
                 <div class="prototype1">
                     <img src="imgs/prototype/Recipies.png">
                     <h1>Start, login and register</h1>
@@ -78,7 +78,7 @@
                         quick as possible you have the option to register with an existing facebook or google account.</p>
                 </div>
              </section> 
-             <section>
+             <section style="flex-direction: column;">
                 <div class="prototype1">
                     <img src="imgs/prototype/Addnew.png">
                     <h1>Add new product</h1>
@@ -88,7 +88,7 @@
                         calories etc and the expiration date. </p>
                 </div>
 			 </section>
-             <section>
+             <section style="flex-direction: column;">
                 <div class="prototype1">
                     <img src="imgs/prototype/Inventory.png">
                     <h1>Inventory</h1>
@@ -97,7 +97,7 @@
                         expiration. </p>
                 </div>
 			 </section>
-             <section>
+             <section style="flex-direction: column;">
                 <div class="prototype1">
                     <img src="imgs/prototype/Recipies.png">
                     <h1>Recipes</h1>
@@ -108,7 +108,7 @@
                     </p>
                 </div>
 			 </section>
-			 <section>
+			 <section style="flex-direction: column;">
                 <div class="prototype1">
                     <img src="imgs/prototype/Schedule.png">
                     <h1>Schedule</h1>
